@@ -220,6 +220,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Lithuanian (lt)
 * Norwegian (no)
 * Occitan (oc)
+* Old Church Slavonic (cu)
 * Polish (pl)
 * Portuguese (pt)
 * Russian (ru)
